<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bai1"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_tv"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/txt_tv1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBgSelector"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_selector"
                android:padding="8dp"
                android:text="@string/txt_btn1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBgSelectorDisabled"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_bg_selector_disable"
                android:padding="8dp"
                android:text="@string/txt_btn2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDrawableSelector"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_drawable_selector"
                android:padding="16dp" />

            <ImageButton
                android:id="@+id/imgButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@color/green"
                android:scaleType="center"
                android:src="@drawable/btn_drawable_selector" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_toast"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:text="@string/txt_btn6"
                android:padding="10dp"
                android:background="@drawable/custom_btn"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/txt_tv2"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShapeRound"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_round_shape"
                android:text="@string/txt_btn3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShapeGradient"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_shape_gradient"
                android:padding="8dp"
                android:text="@string/txt_btn4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnShapeSelector"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_selector_shape"
                android:padding="8dp"
                android:text="@string/txt_btn5" />

            <ImageButton
                android:id="@+id/imgButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_shape_gradient"
                android:scaleType="center"
                android:src="@drawable/btn_drawable_selector" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dialog"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="80dp"
                android:text="@string/txt_btn7"
                android:padding="10dp"
                android:background="@drawable/custom_btn"/>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/teal_700"
            android:text="@string/txt_tv3"/>
    </LinearLayout>
</LinearLayout>