<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:src="@drawable/img"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_tv4"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginEnd="90dp"
            android:textColor="@color/red"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/txt_user"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/txt_pass"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:password="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="100dp"
            android:background="@color/green"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_Login">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@color/green"
            android:layout_marginStart="10dp"
            android:text="@string/btn_Exit">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>


</LinearLayout>